testing horizontal overflow fix on index

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,9 @@
+/* to fix side scrolling issue */
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 /* just sidebar things ----------------------- */
 
 .sidebar{
